actualizando index para volver a desplegar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         html,body {
-            background-color: cadetblue;
+            background-color: rgb(211, 15, 97);
         }
     </style>
 </head>
